force-app/main/default/objects/AWB_Tracking_Status__mdt/AWB_Tracking_Status__mdt.object-meta.xml
<CustomObject>
    <description>Used to store mapping of AWB Status</description>
    <label>AWB Tracking Status</label>
    <pluralLabel>AWB Tracking Statuses</pluralLabel>
</CustomObject>