force-app/main/default/objects/AWB_Tracking_Status__mdt/fields/AirAsia_AWB_Status__c.field-meta.xml
<CustomField>
    <fullName>AirAsia_AWB_Status__c</fullName>
    <label>AirAsia AWB Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>