force-app/main/default/objects/AWB_Tracking_Status__mdt/fields/GO_Air_AWB_Status__c.field-meta.xml
<CustomField>
    <fullName>GO_Air_AWB_Status__c</fullName>
    <label>GO Air AWB Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>