force-app/main/default/objects/AWB_Tracking_Status__mdt/fields/Indigo_AWB_Status__c.field-meta.xml
<CustomField>
    <fullName>Indigo_AWB_Status__c</fullName>
    <label>Indigo AWB Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>