force-app/main/default/objects/AWB_Tracking_Status__mdt/fields/SpiceJet_AWB_Status__c.field-meta.xml
<CustomField>
    <fullName>SpiceJet_AWB_Status__c</fullName>
    <label>SpiceJet AWB Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>