force-app/main/default/objects/AWB_Tracking_Status__mdt/listViews/AWB_Status.listView-meta.xml
<ListView>
    <fullName>AWB_Status</fullName>
    <columns>MasterLabel</columns>
    <columns>SpiceJet_AWB_Status__c</columns>
    <columns>Indigo_AWB_Status__c</columns>
    <columns>AirAsia_AWB_Status__c</columns>
    <columns>GO_Air_AWB_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>AWB Status</label>
</ListView>